syntax = "proto3";
package sec06;

option java_multiple_files = true;
option java_package = "com.animesh.grpc.sec06.models";

// gRPC request
message BalanceCheckRequest {
    int32 account_number = 1;
}

// gRPC response
message AccountBalance {
    int32 account_number = 1;
    int32 balance = 2;
}

service BankService {
    rpc getAccountBalance (BalanceCheckRequest) returns (AccountBalance);
}

